--- a/sign-in/heroes.css
+++ b/sign-in/heroes.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url('../images/traxer.jpg');
+    background-image: url('../images/reward.png');
     background-size: cover; /* Ensures the image covers the entire background */
     background-position: center; /* Centers the background image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
