--- a/sign-in/carousel.css
+++ b/sign-in/carousel.css
@@ -471,6 +471,10 @@ color: #fff;	/* Add shadow for depth */}
     
     display: none; /* Optionally keep hidden for a minimalistic look */
 }}
+.carousel-control-prev-icon, 
+.carousel-control-next-icon {
+    filter: invert(1); /* Makes arrows white */
+}
 
 
   
